[REFACTOR] Changed type of id in tests from Long to UUID